# StenoMusic

./: CMakeLists.txt  LICENSE  README.md  main.cpp
assets/: preferences.json
assets/songs/flyAway/: flyAway.lrc  song.json
src/: Lyrics.cpp  Lyrics.h  main.cpp
